@@ -72,6 +72,8 @@ New features added
   - The `autodoc` extension now offers a ``show-inheritance`` option
     for autoclass that inserts a list of bases after the signature.
 
+  - The autodoc directives now support the ``noindex`` flag option.
+
 
 Bugs fixed
 ----------
